--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
